# Hare-IDL

./: .gitattributes  .gitmodules  DEVELOPMENT-FLOW-AND-RELEASE-VERSIONING.md  LICENSE  README.md  STYLE-GUIDE.md
dbg/back/: CMakeLists.txt  hare.bat  main.cpp  output.bat  sample.h  sample.h.idlbin
dbg/front-back/: CMakeLists.txt  debug.cpp
dbg/front/cpp-clang/: CMakeLists.txt  hareidl.h  main.cpp  sample.cpp  sample.h
dbg/front/deserialize/: CMakeLists.txt  main.cpp
dbg/front/idl/: CMakeLists.txt  debug.cpp  debug.h  hare.bat  idl_tree.current.idl  idl_tree.dump.txt  idl_tree.h.idlbin  idl_tree.txt  main.cpp  sample-with-cpp.dump  sample-with-cpp.h  sample-with-cpp.idl  sample-with-cpp.out  sample.idl  sample2.current.idl  sample2.idl  sample2.txt
dbg/protobuf/: CMakeLists.txt  dbg_assert_equal.h  dbg_helpers.h  dbg_print.h  dbg_proto_helpers.h  idl_tree.h.idlbin  idl_tree_front.bat  idl_tree_gen.bat  main.cpp  output.cpp  output.h  output.pb.cc  output.pb.h  output.proto  output_declare.h  proto_gen.bat  sample.h  sample.h.idlbin  sample.idl  sample_front.bat
src/: CMakeLists.txt  idlc_include.h  main.cpp
src/back/: CMakeLists.txt  back_idl_tree.cpp  back_idl_tree.h  idl_tree_finalizer.cpp  idl_tree_finalizer.h  idlc_back.cpp  idlc_back.h  template_instantiator.cpp  template_instantiator.h  template_instantiator_derived.cpp  template_instantiator_derived.h  template_line_tokenizer.cpp  template_line_tokenizer.h  template_line_tokens.cpp  template_line_tokens.h  template_parser.cpp  template_parser.h  template_processor.cpp  template_processor.h  template_tree_builder.cpp  template_tree_builder.h
src/codegen/: README.md
src/codegen/cpp/: README.md
src/codegen/cpp/protobuf/: README.md
src/front/: .gitignore  base_node.cpp  base_node.h  common.cpp  common.h  debug.cpp  debug.h  error.cpp  error.h  forward_decl.h  idl_node.h  literal_node.cpp  literal_node.h  main.cpp  parser.h  parser_helper.cpp  visitor.h
src/front-back/: CMakeLists.txt  README.md  generate.bat  idl_tree.h  idl_tree.idl  idl_tree_serializer.cpp  idl_tree_serializer.h  main.cpp  output.cpp  output.h  raiistdiofile.h
src/front-back/cpp/codegen/: README.md
src/front/cpp-clang/: C++2HareIDL_release_38.patch  CMakeLists.txt  README.md  clang-release_38-hare-idl.patch  clang_38.patch  cpp-parser.cpp  cpp-parser.h  main.cpp
src/front/cpp-clang/test/: sample.cpp  sample.h
src/front/grammar/: grammar.bat  hare-idl.l  hare-idl.output  hare-idl.tab.c  hare-idl.tab.h  hare-idl.y  lex.yy.c  parser_helper.h  sample.idl
src/front/idl/: CMakeLists.txt  debug.cpp  debug.h  grammar.bat  hare-idl.l  hare-idl.output  hare-idl.tab.c  hare-idl.tab.cpp  hare-idl.tab.h  hare-idl.y  idl.cpp  idl.vcxproj  idl.vcxproj.filters  lex.h  lex.yy.c  lex.yy.cpp  parser.h  parser_helper.cpp  parser_helper.h  sample.idl  style.bat
src/front/idl/test/: debug.cpp  debug.h  main.cpp  sample.idl
src/front/idl2/: common.h  debug.cpp  debug.h  error.cpp  error.h  idl2.vcxproj  idl2.vcxproj.filters  idl_node.h  literal_node.cpp  literal_node.h  main.cpp  parser.h  parser_helper.cpp
src/hare/: hare.h  hareidl.h
src/targets/cpp/baselib_mb/protobuf/: baselib.cpp  baselib.h  baselib_mb.cpp  baselib_mb.h  estimator.h  extrapolation.h
src/targets/cpp/codegen/protobuf/: README.md  dbg_assert_equal.txt  dbg_helpers.txt  dbg_print.txt  encoding.txt  encoding_extrapolation.txt  main.txt  mapping.txt  proto.txt  protobuff_gen.txt
src/targets/cpp/include/protobuf/: README.md  baselib.h  baselib2.h  baselib_mb.h  baselib_mb2.h  mb_baselib.h
src/targets/cpp/libsrc/: README.md
src/targets/cpp/libsrc/protobuf/: README.md  baselib.cpp  baselib2.cpp  baselib_mb.cpp  baselib_mb2.cpp
src/targets/sample/: template.txt  template2.txt  template4.txt  template5.txt
src/targets/sample/include/: simple_lib.h
src/targets/sample/template6/: encoding.txt  main.txt  mapping.txt
src/targets/sample/template7/: encoding.txt  mapping.txt
src/targets/sample/template8/: encoding.txt  main.txt  mapping.txt
src/targets/sample/template9/: encoding.txt  main.txt  mapping.txt
test/targets/benchmark-protobuf/: CMakeLists.txt  baselib_func_benchmark.cpp  baselib_func_benchmark.h  benchmark.txt  main.cpp
test/targets/protobuf/: .gitignore  CMakeLists.txt  run_all.bat  test_helper.h  test_helper_mb.h
test/targets/protobuf/basic-types/: CMakeLists.txt  generate.bat  main.cpp  test.h
test/targets/protobuf/discriminated-union/: CMakeLists.txt  main.cpp  test.idl
test/targets/protobuf/extrapolation/: CMakeLists.txt  extrapolation.h  generate.bat  main.cpp  test.h  test.idl
test/targets/protobuf/gpb-idl-tree/: CMakeLists.txt  generate.bat  idl_tree.h  idl_tree.h.data  main.cpp  main_protobuf.txt
test/targets/protobuf/gpb-loop/: .gitignore  CMakeLists.txt  main.cpp  test.h
test/targets/protobuf/gpb-sequence-loop/: .gitignore  CMakeLists.txt  generate.bat  main.cpp  test.h
test/targets/protobuf/idl-primitive/: CMakeLists.txt  generate.bat  main.cpp  test.idl
test/targets/protobuf/packed-sequence/: .gitignore  CMakeLists.txt  dbg_assert_equal.h  generate.bat  main.cpp  output.cpp  output.h  output.proto  test.h
test/targets/protobuf/poly-ptr/: .gitignore  CMakeLists.txt  generate.bat  main.cpp  test.h
